update blackjack 1.0