@@ -1,4 +1,4 @@
-package ru.nsu.a.maslova1.Task_1_1_2;
+package ru.nsu.a.maslova1.blackjack;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,11 +13,11 @@ public class Dealer {
     /**
      * Создание колоды и раздача карт.
      */
-    public static void distributionCard(){
+    public static void distributionCard() {
         PlayerCards = new ArrayList<>();
         DealerCards = new ArrayList<>();
 
-        if (Deck.deckSize() < 4){
+        if (Deck.deckSize() < 4) {
             System.out.println("В колоде недостаточно карт. Создана новая колода.");
             Deck.deckCreate();
         }
@@ -29,7 +29,7 @@ public class Dealer {
 
         System.out.print("Дилер раздал карты\n");
         System.out.print("\tВаши карты: [");
-        for (int i = 0; i < PlayerCards.size(); i++){
+        for (int i = 0; i < PlayerCards.size(); i++) {
             System.out.print(PlayerCards.get(i));
             if (i < PlayerCards.size() - 1) {
                 System.out.print(", ");
@@ -39,10 +39,9 @@ public class Dealer {
 
         System.out.print("\tКарты дилера: [");
         if (DealerCards.size() == 2) {
-            System.out.println(DealerCards.getFirst() + ", <закрытая карта>]");
-        }
-        else {
-            for (Card cardsD: DealerCards){
+            System.out.println(DealerCards.get(0) + ", <закрытая карта>]");
+        } else {
+            for (Card cardsD : DealerCards) {
                 System.out.print(cardsD);
             }
             System.out.printf("] => %d\n", calculatePoints(DealerCards));
@@ -53,22 +52,22 @@ public class Dealer {
     /**
      * Действия дилера при разных ситуациях.
      */
-    public static void dealerPlay(){
+    public static void dealerPlay() {
         System.out.println("Ход дилера");
         System.out.println("-------");
-        if (DealerCards.size() == 2){
+        if (DealerCards.size() == 2) {
             System.out.println("Дилер открывает закрытую карту: " + DealerCards.get(1));
             System.out.print("\tКарты дилера: [");
 
-            for (Card cardsD: DealerCards){
+            for (Card cardsD : DealerCards) {
                 System.out.print(cardsD);
             }
             System.out.printf("] => %d\n", calculatePoints(DealerCards));
         }
-        while (calculatePoints(DealerCards) < 17){
+        while (calculatePoints(DealerCards) < 17) {
             Card newCard = Deck.takeCard();
 
-            if (Deck.isEmpty()){
+            if (Deck.isEmpty()) {
                 System.out.println("В колоде закончились карты. Создана новая колода.");
                 Deck.deckCreate();
             }
@@ -77,7 +76,7 @@ public class Dealer {
             System.out.println("Дилер берет новую карту карту - " + newCard);
 
             System.out.print("\tКарты дилера: [");
-            for (int i = 0; i < DealerCards.size(); i++){
+            for (int i = 0; i < DealerCards.size(); i++) {
                 System.out.print(DealerCards.get(i));
                 if (i < PlayerCards.size() - 1) {
                     System.out.print(", ");
@@ -89,16 +88,16 @@ public class Dealer {
 
     /**
      * Подсчёт количества очков.
+     *
      * @param array массив карт игрока или дилера
      * @return количество очков
      */
-    public static int calculatePoints(List<Card>array){
+    public static int calculatePoints(List<Card> array){
         int count = 0;
         for (Card card : array) {
             if (card.rank() == Card.Rank.ACE && (count + card.getValue()) >= 21) {
                 count += 1;
-            }
-            else {
+            } else {
                 count += card.getValue();
             }
         }
